replace String.format by formatted